[gd_scene load_steps=12 format=3 uid="uid://bp2vpf7g8w8aj"]

[ext_resource type="Texture2D" uid="uid://0w30yqjdeodi" path="res://visual/Up.png" id="1_f2eoo"]
[ext_resource type="Script" path="res://ctm_ui/Spinbox.gd" id="1_tmv1v"]
[ext_resource type="Texture2D" uid="uid://bqx6jbdten1d1" path="res://visual/Down.png" id="2_wsjly"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yni7n"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.15, 0.009, 0.009, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color(0.3, 0.06, 0.06, 1)
corner_radius_top_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ilo3"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.2, 0.01, 0.01, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color(0.4, 0.076, 0.076, 1)
corner_radius_top_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wue2p"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.9, 0.27, 0.27, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color(1, 0.6, 0.6, 1)
corner_radius_top_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o12w0"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.08, 0.06, 0.06, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color(0.15, 0.12, 0.12, 1)
corner_radius_top_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5khm"]
content_margin_left = 3.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.15, 0.009, 0.009, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.06, 0.06, 1)
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0r17a"]
content_margin_left = 3.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.2, 0.01, 0.01, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.076, 0.076, 1)
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_flwce"]
content_margin_left = 3.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.9, 0.27, 0.27, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.6, 0.6, 1)
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iburr"]
content_margin_left = 3.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.08, 0.06, 0.06, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.15, 0.12, 0.12, 1)
corner_radius_bottom_right = 6
corner_detail = 16

[node name="Spinbox" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
offset_right = 120.0
offset_bottom = 32.0
theme_override_constants/separation = 8
script = ExtResource("1_tmv1v")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_length = 5
context_menu_enabled = false
select_all_on_focus = true
caret_blink = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Up" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yni7n")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ilo3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wue2p")
theme_override_styles/disabled = SubResource("StyleBoxFlat_o12w0")
action_mode = 0
icon = ExtResource("1_f2eoo")
icon_alignment = 1
expand_icon = true

[node name="Timer" type="Timer" parent="HBoxContainer/VBoxContainer/Up"]
one_shot = true

[node name="Timer2" type="Timer" parent="HBoxContainer/VBoxContainer/Up"]

[node name="Down" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_p5khm")
theme_override_styles/hover = SubResource("StyleBoxFlat_0r17a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_flwce")
theme_override_styles/disabled = SubResource("StyleBoxFlat_iburr")
action_mode = 0
icon = ExtResource("2_wsjly")
icon_alignment = 1
expand_icon = true

[node name="Timer" type="Timer" parent="HBoxContainer/VBoxContainer/Down"]
one_shot = true

[node name="Timer2" type="Timer" parent="HBoxContainer/VBoxContainer/Down"]

[node name="Reset" type="Button" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
text = "‚ü≤"

[connection signal="focus_entered" from="HBoxContainer/LineEdit" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/LineEdit" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_text_submitted"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/Up" to="." method="_on_up_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/Up" to="." method="_on_up_button_up"]
[connection signal="timeout" from="HBoxContainer/VBoxContainer/Up/Timer" to="." method="_on_up_buildup_timer_timeout"]
[connection signal="timeout" from="HBoxContainer/VBoxContainer/Up/Timer2" to="." method="_on_up_repeat_timer_timeout"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/Down" to="." method="_on_down_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/Down" to="." method="_on_down_button_up"]
[connection signal="timeout" from="HBoxContainer/VBoxContainer/Down/Timer" to="." method="_on_down_buildup_timer_timeout"]
[connection signal="timeout" from="HBoxContainer/VBoxContainer/Down/Timer2" to="." method="_on_down_repeat_timer_timeout"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
